Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22007

Qt Creator crashes with incorrect configurations.

XMLWordPrintable

    • 5c96ec191bdc8f0469171ee3ee7cf7d1474ecf3f (qt-creator/qt-creator/4.8)

      To repeat the problem you need to try to build a project that has a step "Build APK". I found out that these are problems in the configuration (by removing them completely), but I don't know yet what problems with configurations lead to a crash.

      Log:

      QObject::connect: No such signal Core::ICore::themeChanged()
      Trying to load translation file from dir "/usr/local/share"
      Trying to load translation file from dir "/usr/share"
      Trying to load translation file from dir "/usr/share/qtermwidget5/translations"
      default KB_LAYOUT_DIR:  "/usr/share/qtermwidget5/kb-layouts"
      loadAllColorSchemes
      ("BreezeModified", "BlackOnLightYellow", "Linux", "Ubuntu", "WhiteOnBlack", "BlackOnRandomLight", "DarkPastels", "GreenOnBlack", "SolarizedLight", "BlackOnWhite", "Tango", "Solarized")
      default KB_LAYOUT_DIR:  "/usr/share/qtermwidget5/kb-layouts"
      SOFT ASSERT: "qtSupport" in file ../../../../qt-creator-opensource-src-4.8.1/src/plugins/android/androidextralibrarylistmodel.cpp, line 86
      SOFT ASSERT: "qtSupport" in file ../../../../qt-creator-opensource-src-4.8.1/src/plugins/android/androidbuildapkwidget.cpp, line 299
      SOFT ASSERT: "qtSupport" in file ../../../../qt-creator-opensource-src-4.8.1/src/plugins/android/androidextralibrarylistmodel.cpp, line 86
      ConnectionServer error: "QLocalSocket: Remote closed" "/tmp/QtCreator-nblLqg/ClangBackEnd-12882"
      

      Stack trace:

      #0  0x00007fffe0b299b7 in Android::AndroidBuildApkStep::init(QList<ProjectExplorer::BuildStep const*>&) () at /usr/lib/qtcreator/plugins/libAndroid.so
      #1  0x00007fffe1b8f272 in ProjectExplorer::BuildManager::buildQueueAppend(QList<ProjectExplorer::BuildStep*> const&, QStringList, QStringList const&) ()
          at /usr/lib/qtcreator/plugins/libProjectExplorer.so
      #2  0x00007fffe1b91d6d in ProjectExplorer::BuildManager::buildLists(QList<ProjectExplorer::BuildStepList*>, QStringList const&) ()
      --Type <RET> for more, q to quit, c to continue without paging--
          at /usr/lib/qtcreator/plugins/libProjectExplorer.so
      #3  0x00007fffe1b01a8f in  ()
          at /usr/lib/qtcreator/plugins/libProjectExplorer.so
      #4  0x00007fffe1b030c7 in ProjectExplorer::ProjectExplorerPlugin::runRunConfiguration(ProjectExplorer::RunConfiguration*, Core::Id, bool) ()
          at /usr/lib/qtcreator/plugins/libProjectExplorer.so
      #5  0x00007fffe1b03259 in  ()
          at /usr/lib/qtcreator/plugins/libProjectExplorer.so
      #6  0x00007ffff6cb79d0 in QMetaObject::activate(QObject*, int, int, void**) ()
          at /usr/lib/libQt5Core.so.5
      #7  0x00007ffff7802633 in QAction::triggered(bool) ()
          at /usr/lib/libQt5Widgets.so.5
      #8  0x00007ffff6cb79d0 in QMetaObject::activate(QObject*, int, int, void**) ()
          at /usr/lib/libQt5Core.so.5
      #9  0x00007ffff7802633 in QAction::triggered(bool) ()
          at /usr/lib/libQt5Widgets.so.5
      #10 0x00007ffff7804d1a in QAction::activate(QAction::ActionEvent) ()
          at /usr/lib/libQt5Widgets.so.5
      #11 0x00007ffff78f745e in  () at /usr/lib/libQt5Widgets.so.5
      #12 0x00007ffff78f7696 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      #13 0x00007ffff79e704b in QToolButton::mouseReleaseEvent(QMouseEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      --Type <RET> for more, q to quit, c to continue without paging--
      #14 0x00007ffff7849b68 in QWidget::event(QEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      #15 0x00007ffff79e70f4 in QToolButton::event(QEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      #16 0x00007fffe24d784a in  () at /usr/lib/qtcreator/plugins/libCore.so
      #17 0x00007ffff7808e24 in QApplicationPrivate::notify_helper(QObject*, QEvent*)
          () at /usr/lib/libQt5Widgets.so.5
      #18 0x00007ffff7810929 in QApplication::notify(QObject*, QEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      #19 0x00007ffff6c8ce99 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
          () at /usr/lib/libQt5Core.so.5
      #20 0x00007ffff780fc08 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) ()
          at /usr/lib/libQt5Widgets.so.5
      #21 0x00007ffff7864e93 in  () at /usr/lib/libQt5Widgets.so.5
      #22 0x00007ffff7867f87 in  () at /usr/lib/libQt5Widgets.so.5
      #23 0x00007ffff7808e24 in QApplicationPrivate::notify_helper(QObject*, QEvent*)
          () at /usr/lib/libQt5Widgets.so.5
      #24 0x00007ffff78106e1 in QApplication::notify(QObject*, QEvent*) ()
          at /usr/lib/libQt5Widgets.so.5
      #25 0x00007ffff6c8ce99 in QCoreApplication::notifyInternal2(QObject*, QEvent*)
          () at /usr/lib/libQt5Core.so.5
      #26 0x00007ffff721396e in QGuiApplicationPrivate::processMouseEvent(QWindowSyste--Type <RET> for more, q to quit, c to continue without paging--
      mInterfacePrivate::MouseEvent*) () at /usr/lib/libQt5Gui.so.5
      #27 0x00007ffff7214dd6 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib/libQt5Gui.so.5
      #28 0x00007ffff71ee75c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Gui.so.5
      #29 0x00007ffff266390c in  () at /usr/lib/libQt5XcbQpa.so.5
      #30 0x00007ffff5273a2f in g_main_context_dispatch ()
          at /usr/lib/libglib-2.0.so.0
      #31 0x00007ffff52755e9 in  () at /usr/lib/libglib-2.0.so.0
      #32 0x00007ffff527562e in g_main_context_iteration ()
          at /usr/lib/libglib-2.0.so.0
      #33 0x00007ffff6ce2ce9 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #34 0x00007ffff6c8bb2c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
      #35 0x00007ffff6c93e36 in QCoreApplication::exec() ()
          at /usr/lib/libQt5Core.so.5
      #36 0x000055555555e4d4 in  ()
      #37 0x00007ffff66a6223 in __libc_start_main () at /usr/lib/libc.so.6
      #38 0x000055555555e99e in  ()
      

      During debugging in the "AndroidBuildApkStep::init" method I found lines that lead to a crash:

      AndroidQtSupport *qtSupport = AndroidManager::androidQtSupport(target());
          QFileInfo sourceDirInfo(qtSupport->targetData(Constants::AndroidPackageSourceDir, target()).toString());
      

      The method "AndroidManager :: androidQtSupport" can return nullptr. For the test, I inserted "QTC_ASSERT (qtSupport, return false);" between getting the pointer and using it. This helped, but I do not know how to create pull request in your repository, so I create a task.

       

        For Gerrit Dashboard: QTCREATORBUG-22007
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            neit95 Aleksandr Konovalov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes