Fix crash in AndroidBuildApkStep::init

Change-Id: Ia0b985eb63389edb58c7d32a1fe89c1bad57a1f8
Done-by: Aleksandr Konovalov
Fixes: QTCREATORBUG-22007
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Vikas Pachdha <vikas.pachdha@qt.io>